--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cssselect==1.1.0
 dj-database-url==0.5.0
 Django==3.1.1
 django-heroku==0.3.1
+django-cors-headers==3.2.1
 graphene==2.1.8
 graphene-django==2.13.0
 graphql-core==2.3.2
