--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aniso8601==7.0.0
 asgiref==3.2.10
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==3.1.1
+django-heroku==0.3.1
 django-cors-headers==3.2.1
 graphene==2.1.8
 graphene-django==2.13.0
@@ -10,6 +12,7 @@ graphql-relay==2.0.1
 gunicorn==20.0.4
 lxml==4.5.2
 promise==2.3
+psycopg2==2.8.6
 pyquery==1.4.1
 pytz==2020.1
 Rx==1.6.1
