Added scheduled job for updating games.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,41 @@
 aniso8601==7.0.0
+appnope==0.1.0
+APScheduler==3.6.3
 asgiref==3.2.10
+backcall==0.2.0
 cssselect==1.1.0
 dj-database-url==0.5.0
+decorator==4.4.2
 Django==3.1.1
 django-heroku==0.3.1
+django-apscheduler==0.4.2
 django-cors-headers==3.2.1
 graphene==2.1.8
 graphene-django==2.13.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 gunicorn==20.0.4
+ipdb==0.13.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+jedi==0.17.2
 lxml==4.5.2
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 promise==2.3
 psycopg2==2.8.6
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.7.1
 pyquery==1.4.1
 pytz==2020.1
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.15.0
 sqlparse==0.3.1
+traitlets==5.0.4
+tzlocal==2.1
 Unidecode==1.1.1
+wcwidth==0.2.5
 whitenoise==5.2.0
